force-app/main/default/objects/Student__c/fields/HaveWhical__c.field-meta.xml
<CustomField>
    <fullName>HaveWhical__c</fullName>
    <label>HaveWhicle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>