force-app/main/default/objects/Student__c/fields/Husband_Name__c.field-meta.xml
<CustomField>
    <fullName>Husband_Name__c</fullName>
    <label>Husband Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>