force-app/main/default/objects/Student__c/fields/Married_Status__c.field-meta.xml
<CustomField>
    <fullName>Married_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Married Status</label>
    <type>Checkbox</type>
</CustomField>