force-app/main/default/objects/Student__c/fields/Spouse__c.field-meta.xml
<CustomField>
    <fullName>Spouse__c</fullName>
    <label>Spouse</label>
    <length>50</length>
    <type>Text</type>
</CustomField>