force-app/main/default/objects/Student__c/validationRules/Choose_Gender_when_you_select_checkbox.validationRule-meta.xml
<ValidationRule>
    <fullName>Choose_Gender_when_you_select_checkbox</fullName>
    <active>true</active>
    <errorConditionFormula>(ISPICKVAL( Gender__c , &apos;&apos;) &amp;&amp;  Married_Status__c ==true)</errorConditionFormula>
    <errorDisplayField>Gender__c</errorDisplayField>
    <errorMessage>Must Choose Gender when married status is selected</errorMessage>
</ValidationRule>