force-app/main/default/objects/Student__c/validationRules/If_gender_M_is_then_wife_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>If_gender_M_is_then_wife_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>(ISPICKVAL( Gender__c , &apos;Male&apos;) &amp;&amp;  Married_Status__c ==true)
 &amp;&amp;
     (ISBLANK(Wife_Name__c) ||!(ISBLANK( Husband_Name__c )))</errorConditionFormula>
    <errorDisplayField>Wife_Name__c</errorDisplayField>
    <errorMessage>wife is required and Hasband name is not</errorMessage>
</ValidationRule>