force-app/main/default/objects/Student__c/validationRules/If_user_is_F_then_H_name_is_requied.validationRule-meta.xml
<ValidationRule>
    <fullName>If_user_is_F_then_H_name_is_requied</fullName>
    <active>true</active>
    <errorConditionFormula>(ISPICKVAL( Gender__c ,&apos;Female&apos;) &amp;&amp;   Married_Status__c==true )
&amp;&amp;
 (ISBLANK( Husband_Name__c )||!(ISBLANK( Wife_Name__c )))</errorConditionFormula>
    <errorDisplayField>Husband_Name__c</errorDisplayField>
    <errorMessage>Husband name is required wife name is not</errorMessage>
</ValidationRule>