force-app/main/default/objects/Student__c/validationRules/W_H_name_must_be_empty_if_married_is_F.validationRule-meta.xml
<ValidationRule>
    <fullName>W_H_name_must_be_empty_if_married_is_F</fullName>
    <active>true</active>
    <errorConditionFormula>Married_Status__c ==false &amp;&amp; (!ISBLANK( Wife_Name__c )||!ISBLANK(  Husband_Name__c  ))</errorConditionFormula>
    <errorMessage>Wife, Hansband name must be empty if married is false</errorMessage>
</ValidationRule>