force-app/main/default/objects/Student__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Last_Name__c</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Gender__c</field>
        <operation>equals</operation>
        <value>Male</value>
    </filters>
    <label>All</label>
</ListView>